--- a/app/src/main/res/values-hi/Strings.xml
+++ b/app/src/main/res/values-hi/Strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">AndroidDevelopmentPrograms</string>
     <string name="localization_intro">युवाओं को सशक्त बनाएं</string>
+<!--    <string name="ca2">ुवाओं</string>-->
 </resources>
