--- a/app/src/main/res/values-hi/Strings.xml
+++ b/app/src/main/res/values-hi/Strings.xml
@@ -3,4 +3,6 @@
     <string name="app_name">AndroidDevelopmentPrograms</string>
     <string name="localization_intro">युवाओं को सशक्त बनाएं</string>
 <!--    <string name="ca2">ुवाओं</string>-->
+
+    <string name = "vision">उज्जवल भविष्य की ओर</string>
 </resources>
