Added language changer and stuff

--- a/app/src/main/res/values-hi/Strings.xml
+++ b/app/src/main/res/values-hi/Strings.xml
@@ -5,4 +5,6 @@
 <!--    <string name="ca2">ुवाओं</string>-->
 
     <string name = "vision">उज्जवल भविष्य की ओर</string>
+    <string name="name">प्रांजल सिन्हा</string>
+    <string name="gender">पुरुष</string>
 </resources>
